core: api-server: added /docs API for api docs
